@@ -12,6 +12,9 @@ What's New in Python 2.7 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #3720: Fix a crash when an iterator modifies its class and removes its
+  __next__ method.
+
 - Issue #4893: Use NT threading on CE.
 
 - Issue #4915: Port sysmodule to Windows CE.
